Fixed navbar visibilty

--- a/public/style.css
+++ b/public/style.css
@@ -10,9 +10,9 @@
 #homeMenu .ui.menu {
   margin: 0rem 0em;
   font-weight: normal;
-  border: 1px solid rgba(34, 36, 38, 0.15);
-  -webkit-box-shadow: 0px 1px 2px 0 rgba(34, 36, 38, 0.15);
-          box-shadow: 0px 1px 2px 0 rgba(34, 36, 38, 0.15);
+  border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   border-radius: 0rem;
   min-height: 2.85714286em;
 }
@@ -21,4 +21,8 @@
   justify-content: space-evenly;
   margin-top: 1em;
   margin-bottom: 1em;
+}
+#header {
+  min-height: 700px;
+  background-color: #2185d0;
 }
